# pioneer-os

./: .gitignore  CMakeLists.txt  Makefile.gcc  README.md  core_dump.txt  pio  pio_armv8.efi  pio_armv8.elf  qemu_debug  qemu_debug.gdb  qemu_run  virt.dtb
kernel/: kernel.c  kernel_state.c
kernel/arch/armv8/: boot.S  link.ld
kernel/arch/armv8/pl011/: pl011_uart.c
kernel/arch/armv8/qemu/: uart.c
kernel/include/: arch.h  kernel_state.h
kernel/include/arch/armv8/pl011/: pl011_uart.h
kernel/include/arch/armv8/qemu/: uart.h
kernel/include/arch/armv8/raspi4b/: reg.h
kernel/include/drivers/: uart.h
kernel/libk/: kprintf.c
kernel/libk/include/: kstdio.h
lib/include/libc/: string.h
lib/libc/: string.c
lib/libc/include/: stdint.h
